--- a/README.org
+++ b/README.org
@@ -4,7 +4,18 @@ Git-annex repository of datasets for the Screaming Channels on BLE project.
 
 * Datasets
 
-- 231213_single-cable_raw :: The firmware is close as stock -- only using AES software and increased TX power. We use a pairing to generate keys, with Butterfly and WHAD on the attacker side. We attacked the amplitude of the signal received at 2.548 GHz during the legitimate BLE transmission emitted when a connection is started. We do not used any averaging  or instrumeted AES repetitions -- only offline triggering and trace alignment. We were able to retrieve 5 bytes of the key with a very low median/mean PGE, but the maximum PGE of only 1 byte don't allow an efficient bruteforce.
+- 231213_single-cable_raw :: The firmware is close as stock -- only using AES
+  software and increased TX power. We use a pairing to generate keys, with
+  Butterfly and WHAD on the attacker side. We attacked the amplitude of the
+  signal received at 2.548 GHz during the legitimate BLE transmission emitted
+  when a connection is started. We do not used any averaging or instrumeted AES
+  repetitions -- only offline triggering and trace alignment. We were able to
+  retrieve 5 bytes of the key with a very low median/mean PGE, but the maximum
+  PGE of only 1 byte don't allow an efficient bruteforce.
+- 231220_single-1m-rand_raw :: This dataset contains 16k FF traces for the
+  attack subset. Just like =231213_single-cable_raw=, but with an antenna and
+  with 1m of theoretical distance (40 dB of attenuation = real distance of 30
+  cm + 10 dB of insertion loss of the attenuator).
 
 * Organization
 
