[240112_multi-leak-insub-1m-lna_raw] Add desc for dataset collectin on Reaper

--- a/README.org
+++ b/README.org
@@ -36,6 +36,11 @@ Those directories contains full or partials datasets recorded using our
   - No repetitions.
   - Attacked using profile from =231222_single-cable-balanced_raw=, no better
     than key rank of 2^123.
+- [[file:240112_multi-leak-insub-1m-lna_raw/][240112_multi-leak-insub-1m-lna_raw]] ::
+  - 64k FF traces for train/profile.
+  - Antenna at 1m of real distance with LNA.
+  - Input generated using random from serial port using instrumented firmware.
+  - 100 AES repetitions.
 
 * Recordings
 
