--- a/README.org
+++ b/README.org
@@ -39,11 +39,15 @@ Those directories contains full or partials datasets recorded using our
 - [[file:240112_multi-leak-insub-1m-lna_raw/][240112_multi-leak-insub-1m-lna_raw]] ::
   - 64k FF traces for train/profile with 100 AES repetitions.
   - 16k FF traces for attack with 300 AES repetitions.
-  - Antenna at 1m of real distance with LNA.
+  - Simple Wi-Fi antenna at 1m of real distance with 1 LNA.
   - Input generated using random from serial port using instrumented firmware.
 - [[file:240112_multi-leak-insub-1m-lna_avg/][240112_multi-leak-insub-1m-lna_avg]] ::
   - Average of its RAW dataset (=train= and =attack=).
   - Contains 3 profiles with correlation around 0.25 using different number of POIs.
+  - Attacked using different number of traces, different number of POIS, different
+    algo (PCC & PDF).
+  - Best attack using 6000 traces, 1 POI, PCC, leading to 2^59 key rank.
+    Profile is 64k * 100 and Attack is 6k * 300.
 
 * Recordings
 
