--- a/README.org
+++ b/README.org
@@ -48,6 +48,15 @@ Those directories contains full or partials datasets recorded using our
     algo (PCC & PDF).
   - Best attack using 6000 traces, 1 POI, PCC, leading to 2^59 key rank.
     Profile is =64k * 100= and Attack is =6k * 300=.
+- [[file:240124_1-leak-pairing-10cm-lna_raw][240124_1-leak-pairing-10cm-lna_raw]] ::
+  - TODO: 16k FF traces for attack with no repetitions.
+  - Wi-Fi antenna at 10 cm of distance with LNA.
+  - Input generated using pairing from light and non-instrumented firmware.
+- [[file:240124_300-leak-insub-10cm-lna_raw][240124_300-leak-insub-10cm-lna_raw]] ::
+  - TODO: 64k FF traces for train/profile with 300 AES repetitions.
+  - TODO: 16k FF traces for attack with 300 AES repetitions.
+  - Wi-Fi antenna at 10 cm of distance with LNA.
+  - Input generated using random from serial port using instrumented firmware.
 
 * Recordings
 
