--- a/README.org
+++ b/README.org
@@ -49,9 +49,11 @@ Those directories contains full or partials datasets recorded using our
   - Best attack using 6000 traces, 1 POI, PCC, leading to 2^59 key rank.
     Profile is =64k * 100= and Attack is =6k * 300=.
 - [[file:240124_1-leak-pairing-10cm-lna_raw][240124_1-leak-pairing-10cm-lna_raw]] ::
-  - TODO: 16k FF traces for attack with no repetitions.
+  - 16k FF traces for attack with no repetitions.
   - Wi-Fi antenna at 10 cm of distance with LNA.
   - Input generated using pairing from light and non-instrumented firmware.
+  - Best attack using 12k traces leading to key rank of 2^114 using the
+  - 64k * 100 at 1m profile.
 - [[file:240124_300-leak-insub-10cm-lna_raw][240124_300-leak-insub-10cm-lna_raw]] ::
   - TODO: 64k FF traces for train/profile with 300 AES repetitions.
   - TODO: 16k FF traces for attack with 300 AES repetitions.
