--- a/README.org
+++ b/README.org
@@ -52,13 +52,21 @@ Those directories contains full or partials datasets recorded using our
   - 16k FF traces for attack with no repetitions.
   - Wi-Fi antenna at 10 cm of distance with LNA.
   - Input generated using pairing from light and non-instrumented firmware.
-  - Best attack using 12k traces leading to key rank of 2^114 using the
-  - 64k * 100 at 1m profile.
+  - Best attack using 12k traces leading to key rank of 2^114 using the 64k *
+    100 at 1m profile.
+  - Tried to attack using the profile of =240126_300-leak-insub-10cm-lna_avg=,
+    but no better than 2^114.
 - [[file:240126_300-leak-insub-10cm-lna_raw][240126_300-leak-insub-10cm-lna_raw]] ::
-  - TODO: 64k FF traces for train/profile with 300 AES repetitions.
-  - TODO: 16k FF traces for attack with 300 AES repetitions.
+  - 64k FF traces for train/profile with 300 AES repetitions.
+  - 8k FF traces for attack with 300 AES repetitions (configured for 16k but
+    not terminated because of lack of space).
   - Wi-Fi antenna at 10 cm of distance with LNA.
   - Input generated using random from serial port using instrumented firmware.
+- [[file:240126_300-leak-insub-10cm-lna_avg/][240126_300-leak-insub-10cm-lna_avg]] ::
+  - Average of its corresponding RAW dataset.
+  - Profiles with 1, 2, 3 POIs.
+  - Best attack and bruteforce with key rank = 2^27 and PGE median = 1 for 2k
+    traces.
 
 * Recordings
 
