--- a/README.org
+++ b/README.org
@@ -71,7 +71,7 @@ Those directories contains full or partials datasets recorded using our
   - TODO: Change the =23= to =24= in the name.
   - PROG: 16k profile traces.
   - PROG: 4k attack traces.
-  - Anemic box, no LNA.
+  - Anechoic box, no LNA.
   - 2.533 GHz of center frequency, 8 MHz of bandwidth.
   - Input generated using pairing from stock firmware.
   - No repetitions nor for profile or attack.
