--- a/README.org
+++ b/README.org
@@ -92,8 +92,16 @@ Those directories contains full or partials datasets recorded using our
   - Both attacks are very effective, lowering the key rank to 2^30 using 30 to
     300 attack traces.
 - [[file:240305_custom_firmware_phase_eval_iq]] ::
-  - Same configuration as previous dataset but keep I/Q instead of real data
-    corresponding to amplitude and phase rotation.
+  - Same configuration as previous dataset but:
+    - Keep I and Q.
+    - Compute I and Q augmented (new concept).
+  - Good profiles of ~3k traces with r = 1 for correlation.
+  - Attacks up to 200 traces.
+  - Attacks successful with amp, phr, i_augmented, q_augmented.
+  - Attacks failed with i and q.
+- [[file:240306_custom_firmware_phase_eval_iq_norep]] ::
+  - Same configuration as previous dataset but:
+    - Disable repetitions.
 
 * Recordings
 
