--- a/README.org
+++ b/README.org
@@ -3,6 +3,9 @@
 Git-annex repository of datasets for the Screaming Channels on BLE project.
 
 * Datasets
+:PROPERTIES:
+:ID:       98437a5b-5d86-4097-96b1-9a069fd30a79
+:END:
 
 Those directories contains full or partials datasets recorded using our
 =collect.sh= script.
