Add new dataset in the README

--- a/README.org
+++ b/README.org
@@ -130,6 +130,14 @@ Those directories contains full or partials datasets recorded using our
     - The less impacted attack is the phase rotation (only 2^3 of difference of
       keyrank) compared to the others.
   - On this dataset, i_augmented is the better performance attack.
+- [[file:240403_1-leak-pairing-highdist-2.533e9-8e6_raw]] ::
+  - TODO profile traces.
+  - TODO attack traces.
+  - Office environment, TODO meters.
+  - TODO LNA + USP B210 mini + [[https://www.tp-link.com/fr/home-networking/antenna/tl-ant2424b/][TP-Link TL-ANT2424B]].
+  - 2.533 GHz of center frequency, 8 MHz of bandwidth.
+  - Input generated using pairing from stock firmware.
+  - No repetitions nor for profile or attack.
 
 * Recordings
 
