Use a full org entry to describe last dataset

--- a/README.org
+++ b/README.org
@@ -130,7 +130,14 @@ Those directories contains full or partials datasets recorded using our
     - The less impacted attack is the phase rotation (only 2^3 of difference of
       keyrank) compared to the others.
   - On this dataset, i_augmented is the better performance attack.
-- [[file:240403_1-leak-pairing-highdist-2.534e9-16e6_raw]] ::
+
+** [2024-04-03 mer.] Unique leakage using pairing at high distance using 2.534e9 SR and 16e6 FC
+:PROPERTIES:
+:DIR:      240403_1-leak-pairing-highdist-2.534e9-16e6_raw
+:ID:       951929f6-7c55-47e8-8c21-79a660d90f48
+:END:
+
+- Summary ::
   - TODO profile traces.
   - TODO attack traces.
   - Office environment, 120 cm.
@@ -138,6 +145,9 @@ Those directories contains full or partials datasets recorded using our
   - 2.534 GHz of center frequency, 16 MHz of bandwidth.
   - Input generated using pairing from stock firmware.
   - No repetitions nor for profile or attack.
+- [0/2] Tasks ::
+  - [ ] Profile creation
+  - [ ] Attack process
 
 * Recordings
 
